text modified to diegao

--- a/Projeto - Shark/index.html
+++ b/Projeto - Shark/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="hero__title">
                     <h1 class="shark_title">SHARKS</h1>
-                    <p>Unraveling the Mysteries of the Kings of the Oceans</p>
+                    <p>Unraveling the Mysteries of Diegao the Kings of the Oceans</p>
                 </div>
             </section>
         </nav>
